--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,13 +41,13 @@ jobs:
           name: Front-End Build
           command: |
             echo "TODO: Build the frontend app"
-            frontend:build
+            npm run frontend:build
       # TODO: Build the backend API
       - run:
           name: API Build
           command: |
             echo "TODO: Build the backend API"
-            api:build
+            npm run api:build
   # deploy step will run only after manual approval
   deploy:
     docker:
